test/bad/functions/call11.px

func f(String s) def
    return

f("", s="")
